<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/eventsMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F4F8FB"
    tools:context=".EventsPageActivity"
    tools:theme="@style/Base.Theme.PopIn">

    <TextView
        android:id="@+id/EventsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/EventsTitle"
        android:textColor="?attr/colorSecondary"
        android:textSize="42sp"
...
